--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       [
         "expo-router",
         {
-          "origin": "https://07d4-102-89-33-187.ngrok-free.app/"
+          "origin": "https://8aef-102-88-110-229.ngrok-free.app/"
         }
       ],
       [
@@ -37,6 +37,24 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
+        }
+      ],
+      [
+        "expo-sqlite",
+        {
+          "enableFTS": true,
+          "useSQLCipher": true,
+          "android": {
+            // Override the shared configuration for Android
+            "enableFTS": false,
+            "useSQLCipher": false
+          },
+          "ios": {
+            // You can also override the shared configurations for iOS
+            "customBuildFlags": [
+              "-DSQLITE_ENABLE_DBSTAT_VTAB=1 -DSQLITE_ENABLE_SNAPSHOT=1"
+            ]
+          }
         }
       ]
     ],
