--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "db:thing": "bash ./scripts/db-thing.sh"
   },
   "jest": {
     "preset": "jest-expo"
@@ -17,7 +18,9 @@
   "dependencies": {
     "@electric-sql/pglite": "^0.2.15",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@shopify/flash-list": "1.7.1",
@@ -25,6 +28,7 @@
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@xstate/store": "^2.6.2",
     "babel-plugin-inline-import": "^3.0.0",
     "drizzle-orm": "^0.38.2",
     "expo": "~52.0.18",
@@ -38,6 +42,7 @@
     "expo-media-library": "~17.0.3",
     "expo-router": "~4.0.11",
     "expo-splash-screen": "~0.29.18",
+    "expo-sqlite": "~15.0.5",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
@@ -48,9 +53,12 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-katex": "^1.0.2",
     "react-native-mmkv": "^3.2.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.12.0",
@@ -61,6 +69,7 @@
     "react-native-webview": "13.12.5",
     "superjson": "^2.2.2",
     "tamagui": "^1.119.0",
+    "xstate": "^5.19.1",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
