--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "expo-image": "~2.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
+    "expo-local-authentication": "~15.0.1",
     "expo-media-library": "~17.0.3",
     "expo-router": "~4.0.11",
+    "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.18",
     "expo-sqlite": "~15.0.5",
     "expo-status-bar": "~2.0.0",
