profile screen basic ui

--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       [
         "expo-router",
         {
-          "origin": "https://8aef-102-88-110-229.ngrok-free.app/"
+          "origin": "https://ea38-102-88-109-125.ngrok-free.app/"
         }
       ],
       [
