--- a/.gitignore
+++ b/.gitignore
@@ -30,13 +30,14 @@ yarn-error.*
 *.pem
 
 # local env files
-.env*.local
+.env
 
 # typescript
 *.tsbuildinfo
 
 app-example
 
+*.env*
 
 ./sorry.ts
 
