--- a/package.json
+++ b/package.json
@@ -33,14 +33,16 @@
     "@xstate/store": "^2.6.2",
     "babel-plugin-inline-import": "^3.0.0",
     "drizzle-orm": "^0.38.2",
-    "expo": "~52.0.18",
+    "expo": "~52.0.26",
     "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
+    "expo-drizzle-studio-plugin": "^0.1.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image": "~2.0.3",
+    "expo-image-picker": "~16.0.4",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-local-authentication": "~15.0.1",
