--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       [
         "expo-router",
         {
-          "origin": "https://1265-102-88-84-255.ngrok-free.app/"
+          "origin": "https://52ea-102-89-22-117.ngrok-free.app"
         }
       ],
       [
@@ -62,7 +62,8 @@
           "photosPermission": "The app needs access to your photos to let you choose a profile picture.",
           "cameraPermission": "The app needs access to your camera to let you take a profile picture."
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": false
