--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-navigation/bottom-tabs": "^7.0.0",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/bottom-tabs": "7.2.0",
+    "@react-navigation/native": "^7.0.14",
     "@shopify/flash-list": "1.7.1",
     "@tanstack/react-query": "^5.62.8",
     "@trpc/client": "^10.45.2",
@@ -32,35 +32,36 @@
     "@trpc/server": "^10.45.2",
     "@xstate/store": "^2.6.2",
     "babel-plugin-inline-import": "^3.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "drizzle-orm": "^0.38.2",
     "expo": "~52.0.26",
-    "expo-auth-session": "~6.0.1",
-    "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
-    "expo-crypto": "~14.0.1",
+    "expo-auth-session": "~6.0.2",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.4",
+    "expo-crypto": "~14.0.2",
     "expo-drizzle-studio-plugin": "^0.1.1",
-    "expo-font": "~13.0.1",
-    "expo-haptics": "~14.0.0",
-    "expo-image": "~2.0.3",
+    "expo-font": "~13.0.3",
+    "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.4",
     "expo-image-picker": "~16.0.4",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-local-authentication": "~15.0.1",
-    "expo-media-library": "~17.0.3",
-    "expo-router": "~4.0.11",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.18",
-    "expo-sqlite": "~15.0.5",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.4",
+    "expo-local-authentication": "~15.0.2",
+    "expo-media-library": "~17.0.5",
+    "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.21",
+    "expo-sqlite": "~15.0.6",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "lucide-react-native": "^0.468.0",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
@@ -70,7 +71,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-view-shot": "~4.0.3",
     "react-native-web": "~0.19.13",
@@ -89,7 +90,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "drizzle-kit": "^0.30.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
