Swipecards screen performance improvement (memoization and rerender fixes)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,23 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "noUncheckedSideEffectImports": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+
+    "noUncheckedIndexedAccess": true,
+    "checkJs": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "#/*": ["./*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "include": ["**/*.ts", "**/*.tsx"]
 }
