--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/bottom-tabs": "7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@shopify/flash-list": "1.7.1",
+    "@tabler/icons-react": "^3.29.0",
     "@tanstack/react-query": "^5.62.8",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
