improved zustand state for lesson session

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,13 +86,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.ableez.Morse'
+    namespace "com.morse"
     defaultConfig {
-        applicationId 'com.ableez.Morse'
+        applicationId "com.morse"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0"
     }
     signingConfigs {
         debug {
